mysql-db.yml
apiVersion: v1
kind: Pod
metadata:
  name: easypay-mysql
spec:
  containers:
  - image: docker.io/mysql:5.6
    name: easypay-db-container
    volumeMounts:
    - mountPath: /var/lib/mysql
      name: easypay-volume
  volumes:
  - emptyDir: {}
    name: easypay-volume
