frontend-application.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: capstone-easypay
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    project: capstone
  type: LoadBalancer
status:
  loadBalancer: {}
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    project: capstone
  name: capstone-easypay
spec:
  replicas: 2 
  selector:
    matchLabels:
      project: capstone
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        project: capstone
    spec:
      containers:
      - name: capstone-easypay
        image: docker.io/smaqsoodi/finalproject-easypay:0.3.2
      # Just spin & wait forever to avoic CrashloopBack
        command: ["/bin/sh"]
        args: ["-c", "while true; do echo hello; sleep 10;done"]
        imagePullPolicy: Always

#        livenessProbe:
#          httpGet:
#            path: /health
#            port: 80
#          initialDelaySeconds: 30
#          timeoutSeconds: 1

        ports:
        - containerPort: 80      
        resources:
          requests:
            cpu: "200m"
status: {}
